Import stunnel-5.60-4.xs8.src.rpm
Signed-off-by: Samuel Verschelde <stormi-xcp@ylix.fr>

--- a/SOURCES/stunnel@.service
+++ b/SOURCES/stunnel@.service
@@ -4,6 +4,7 @@ After=syslog.target network.target
 
 [Service]
 ExecStart=/usr/bin/stunnel /etc/stunnel/%i.conf
+ExecReload=/bin/kill -HUP $MAINPID
 Type=forking
 PrivateTmp=true
 
